prototypes/linkding/ytt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
spec:
  ingressClassName: nginx
  rules:
  - host: links.duchardt.net
    http:
      paths:
      - backend:
          service:
            name: linkding
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - links.duchardt.net
    secretName: ld-certificate
